--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     </head>
     <body>
         <main >
-            <!-- Header -->
-            <header class="header">
+            <div class="fixed-header">
                 <div class="content">
                     <nav class="navbar">
                         <!-- logo -->
@@ -33,7 +32,11 @@
                             <a href="!#" class="btn action-btn">Sign up</a>
                         </div>
                     </nav>
-                    <!-- hero -->
+                </div>
+            </div>
+           <!-- hero -->
+            <div class="hero-warp">
+                <div class="content">
                     <div class="hero">
                         <div class="info">
                             <p class="sub-title">Welcome to Besnik Agency</p>
@@ -56,7 +59,7 @@
                         />
                     </div>
                 </div>
-            </header>
+            </div>
             <!-- Clients -->
             <div class="client">
                 <div class="content">
