--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="./assets/css/styles.css" />
     </head>
     <body>
-        <main >
+        <main id="home">
             <div class="fixed-header">
                 <div class="content">
                     <nav class="navbar">
@@ -20,11 +20,11 @@
                          <a href="#!"><img src="./assets/img/Logo.svg" alt="Besnik." /></a>
                         <!-- navigation -->
                         <ul>
-                            <li><a href="#!">Home</a></li>
-                            <li><a href="#!">Features</a></li>
-                            <li><a href="#!">Sesources</a></li>
-                            <li><a href="#!">Resources</a></li>
-                            <li><a href="#!">Contact</a></li>
+                            <li><a href="#home">Home</a></li>
+                            <li><a href="#features">Features</a></li>
+                            <li><a href="#sesources">Sesources</a></li>
+                            <li><a href="#resources">Resources</a></li>
+                            <li><a href="#contact">Contact</a></li>
                         </ul>
                         <!-- Action -->
                         <div class="actions">
@@ -101,7 +101,7 @@
                 </div>
             </div>
             <!-- Guides -->
-            <div class="guides">
+            <div id="sesources" class="guides">
                 <div class="content">
                     <h2 class="sub-title">How its works?</h2>
                     <p class="desc">
@@ -166,7 +166,7 @@
                 </div>
             </div>
             <!-- Featured -->
-            <div class="featured">
+            <div id="features" class="featured">
                 <div class="content">
                     <header>
                         <h2 class="sub-title">Featured Properties</h2>
@@ -254,7 +254,7 @@
                 </div>
             </div>
             <!-- Stats -->
-            <div class="stats">
+            <div id="resources" class="stats">
                 <div class="content">
                     <div class="row">
                         <div class="img-block">
@@ -325,7 +325,7 @@
                 </div>
             </div>
             <!-- subscription -->
-            <div class="subcription">
+            <div id="contact"  class="subcription">
                 <div class="content">
                     <div class="body">
                         <div class="info">
