--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <div class="content">
                     <nav class="navbar">
                         <!-- logo -->
-                         <a href="#!"><img src="./assets/img/Logo.svg" alt="Besnik." /></a>
+                         <a href="#"><img src="./assets/img/Logo.svg" alt="Besnik." /></a>
                         <!-- navigation -->
                         <ul>
                             <li><a href="#home">Home</a></li>
@@ -28,8 +28,8 @@
                         </ul>
                         <!-- Action -->
                         <div class="actions">
-                            <a href="!#" class="action-link">Sign n</a>
-                            <a href="!#" class="btn action-btn">Sign up</a>
+                            <a href="#!" class="action-link">Sign n</a>
+                            <a href="#!" class="btn action-btn">Sign up</a>
                         </div>
                     </nav>
                 </div>
