--- a/index.html
+++ b/index.html
@@ -11,29 +11,29 @@
         <link rel="stylesheet" href="./assets/fonts/stylesheet.css" />
         <link rel="stylesheet" href="./assets/css/styles.css" />
     </head>
-    <body>
-        <main id="home">
-            <div class="fixed-header">
-                <div class="content">
-                    <nav class="navbar">
-                        <!-- logo -->
-                         <a href="#"><img src="./assets/img/Logo.svg" alt="Besnik." /></a>
-                        <!-- navigation -->
-                        <ul>
-                            <li><a href="#home">Home</a></li>
-                            <li><a href="#features">Features</a></li>
-                            <li><a href="#sesources">Sesources</a></li>
-                            <li><a href="#resources">Resources</a></li>
-                            <li><a href="#contact">Contact</a></li>
-                        </ul>
-                        <!-- Action -->
-                        <div class="actions">
-                            <a href="#!" class="action-link">Sign n</a>
-                            <a href="#!" class="btn action-btn">Sign up</a>
-                        </div>
-                    </nav>
-                </div>
+    <body>   
+        <header class="fixed-header">
+            <div class="content">
+                <nav class="navbar">
+                    <!-- logo -->
+                        <a href="#"><img src="./assets/img/Logo.svg" alt="Besnik." /></a>
+                    <!-- navigation -->
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#features">Features</a></li>
+                        <li><a href="#sesources">Sesources</a></li>
+                        <li><a href="#resources">Resources</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                    </ul>
+                    <!-- Action -->
+                    <div class="actions">
+                        <a href="#!" class="action-link">Sign n</a>
+                        <a href="#!" class="btn action-btn">Sign up</a>
+                    </div>
+                </nav>
             </div>
+        </header>
+        <main id="home">
            <!-- hero -->
             <div class="hero-warp">
                 <div class="content">
@@ -337,87 +337,87 @@
                     </div>
                 </div>
             </div>
-            <!-- Footer -->
-            <footer class="footer">
-               <div class="content">
-                    <div class="row row-top">
-                        <!-- Product column -->
-                       <div class="column">
-                            <h3 class="heading">Product</h3>
-                            <ul class="list">
-                                <li class="item">
-                                    <a href="">Listing</a>
-                                </li>
-                                <li class="item">
-                                    <a href="">Property</a>
-                                </li>
-                                <li class="item">
-                                    <a href="">Agents</a>
-                                </li>
-                                <li class="item">
-                                    <a href="">Blog</a>
-                                </li>
-                            </ul>
-                       </div>
-                       <!--  Resources column -->
-                       <div class="column">
-                            <h3 class="heading">Resources</h3>
-                            <ul class="list">
-                                <li class="item">
-                                    <a href="">Our Homes</a>
-                                </li>
-                                <li class="item">
-                                    <a href="">Member Stories</a>
-                                </li>
-                                <li class="item">
-                                    <a href="">Video</a>
-                                </li>
-                                <li class="item">
-                                    <a href="">Free trial</a>
-                                </li>
-                            </ul>
-                       </div>
-                        <!-- Company column-->
-                       <div class="column">
-                            <h3 class="heading">Company</h3>
-                            <ul class="list">
-                                <li class="item">
-                                    <a href="">Patnerships</a>
-                                </li>
-                                <li class="item">
-                                    <a href="">Terms of use</a>
-                                </li>
-                                <li class="item">
-                                    <a href="">Privacy</a>
-                                </li>
-                                <li class="item">
-                                    <a href="">Sitemap</a>
-                                </li>
-                            </ul>
-                       </div>
-                       <!-- Get in touch -->
-                       <div class="column">
-                            <h3 class="heading">Company</h3>
-                             <p class="desc">You’ll find your next home, in any style you prefer.</p>
-                             <div class="social">
-                                <a href="" class="socail-link">
-                                    <img src="./assets/img/fb.svg" alt="">
-                                </a>
-                                <a href="" class="socail-link">
-                                    <img src="./assets/img/tw.svg" alt="">
-                                </a>
-                                <a href="" class="socail-link">
-                                    <img src="./assets/img/lk.svg" alt="">
-                                </a>
-                             </div>
-                       </div>
-                    </div>
-                    <div class="row row-bottom">
-                        <img src="./assets/img/Logo.svg" alt="Logo" class="logo">
-                        <p class="copyright">Copyright 2020.com, All rights reserved.</p>
-                    </div>
-               </div>
-            </footer>
         </main>
+        <!-- Footer -->
+        <footer class="footer">
+           <div class="content">
+                <div class="row row-top">
+                    <!-- Product column -->
+                   <div class="column">
+                        <h3 class="heading">Product</h3>
+                        <ul class="list">
+                            <li class="item">
+                                <a href="">Listing</a>
+                            </li>
+                            <li class="item">
+                                <a href="">Property</a>
+                            </li>
+                            <li class="item">
+                                <a href="">Agents</a>
+                            </li>
+                            <li class="item">
+                                <a href="">Blog</a>
+                            </li>
+                        </ul>
+                   </div>
+                   <!--  Resources column -->
+                   <div class="column">
+                        <h3 class="heading">Resources</h3>
+                        <ul class="list">
+                            <li class="item">
+                                <a href="">Our Homes</a>
+                            </li>
+                            <li class="item">
+                                <a href="">Member Stories</a>
+                            </li>
+                            <li class="item">
+                                <a href="">Video</a>
+                            </li>
+                            <li class="item">
+                                <a href="">Free trial</a>
+                            </li>
+                        </ul>
+                   </div>
+                    <!-- Company column-->
+                   <div class="column">
+                        <h3 class="heading">Company</h3>
+                        <ul class="list">
+                            <li class="item">
+                                <a href="">Patnerships</a>
+                            </li>
+                            <li class="item">
+                                <a href="">Terms of use</a>
+                            </li>
+                            <li class="item">
+                                <a href="">Privacy</a>
+                            </li>
+                            <li class="item">
+                                <a href="">Sitemap</a>
+                            </li>
+                        </ul>
+                   </div>
+                   <!-- Get in touch -->
+                   <div class="column">
+                        <h3 class="heading">Company</h3>
+                         <p class="desc">You’ll find your next home, in any style you prefer.</p>
+                         <div class="social">
+                            <a href="" class="socail-link">
+                                <img src="./assets/img/fb.svg" alt="">
+                            </a>
+                            <a href="" class="socail-link">
+                                <img src="./assets/img/tw.svg" alt="">
+                            </a>
+                            <a href="" class="socail-link">
+                                <img src="./assets/img/lk.svg" alt="">
+                            </a>
+                         </div>
+                   </div>
+                </div>
+                <div class="row row-bottom">
+                    <img src="./assets/img/Logo.svg" alt="Logo" class="logo">
+                    <p class="copyright">Copyright 2020.com, All rights reserved.</p>
+                </div>
+           </div>
+        </footer>
     </body>
 </html>
